# deez-notes

./: Cargo.toml  LICENSE  README.md  REVIEW_REPORT.md  notes.md
.github/workflows/: publish-crates.yml  update-aur.yml
aur/: .SRCINFO  PKGBUILD
docs/superpowers/plans/: 2026-06-23-cli-mode.md
docs/superpowers/specs/: 2026-06-23-cli-mode-design.md
src/: app.rs  cli.rs  lib.rs  main.rs
src/config/: settings.rs  theme.rs
src/core/: front_matter.rs  mod.rs  note.rs  note_manager.rs  search.rs  sort.rs  tags.rs
src/editor/: external.rs
src/input/: keybindings.rs  mod.rs  mouse.rs
src/render/: markdown.rs
src/ui/: dialogs.rs  filter_bar.rs  layout.rs  main_panel.rs  mod.rs  search_bar.rs  side_panel.rs  status_bar.rs  update_banner.rs
src/update/: checker.rs  github.rs  mod.rs
tests/: cli_tests.rs  integration_tests.rs
